Header div does not break on small viewport widths.
The text inside the header would collapse outside the div if the
viewport width was reduced too much.

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,18 @@
+/*** PSEUDO CONSTANTS ***
+ * $headerHeight = "100px"
+ ***/
+
 #site {
   max-width: 920px;
   margin: auto;
 }
 
-#header, #face {
-  height: 100px;
+#header {
+  min-height: 100px; /* $headerHeight */
 }
 
 #face {
+  height: 100px; /* $headerHeight */
   float: left;
   padding-right: 4px;
 }
