--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,54 @@
-/*** PSEUDO CONSTANTS ***
- * $headerHeight = "100px"
- ***/
-
 #site {
-  max-width: 920px;
-  margin: auto;
+  max-width: 935px;
 }
 
-#header {
-  min-height: 100px; /* $headerHeight */
+#main_nav {
+  min-height: 125px;
+  border: solid #33322f 10px;
+  padding: 14px;
 }
 
 #face {
-  height: 100px; /* $headerHeight */
+  height: 125px;
   float: left;
-  padding-right: 4px;
+  margin-right: 14px;
 }
 
-A:link, A:visited, A:active {
+#content {
+  margin-left: 17px;
+  margin-right: 17px;
+}
+
+.center {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.inverted {
+  /* TODO: Text color should be different from link color. */
+  color: #fffaed;
+  background-color: #7e0bd6;
+}
+.inverted > a:link, .inverted > a:visited {
+  color: #fffaed;
+}
+.inverted > a:hover {
+  text-decoration: underline;
+}
+
+h1 {
+  /* TODO: Why is the width of the link the whole page? */
+  padding: 0;
+  margin: 0;
+}
+
+a:link, a:visited, a:active {
   color: #7e0bd6;
   font-weight: bold;
   text-decoration: none;
 }
-A:hover {
+a:hover {
   color: #9c53d4;
   font-weight: bold;
   text-decoration: none;
@@ -32,4 +58,6 @@ body {
   color: #33322f;
   background-color: #fffaed;
   font-family: Sans-Serif;
+  font-size: 12pt;
+  font-weight: normal;
 }
