--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
   {% endif %}
   <meta name="google-site-verification" content="CirUfL-R7Ukr5vxRVvqwcDkZTAzyNhP7dXMlJnKb4NU" />
 
-  <link rel="stylesheet" type="text/css" href="css/mcomella.css" />
+  <link rel="stylesheet" type="text/css" href="res/css/mcomella.css" />
 </head>
 <body>
   {{ content }}
