Move 'site' element to default layout.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" type="text/css" href="res/css/mcomella.css" />
 </head>
 <body>
-  {{ content }}
+  <div id="site" class="center">
+    {{ content }}
+  </div>
 </body>
 </html>
