Correct default layout.
It used <div> rather than <ul>.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,13 +16,13 @@
 </head>
 <body>
   <nav>
-    <h1>mcomella.me:~/ $</h1>
-    <div id="nav_local">
+    <span id="title"><a href="/">mcomella.me</a></span>
+    <ul id="nav-local">
       {% include nav_local.ext %}
-    </div>
-    <div id="nav_external">
+    </ul>
+    <ul id="nav-external">
       {% include nav_external.ext %}
-    </div>
+    </ul>
   </nav>
 
   <div id="content">
