Add <nav> box-shadow.

--- a/res/css/mcomella.less
+++ b/res/css/mcomella.less
@@ -1,4 +1,5 @@
 @nav_bg: #f24610;
+@nav_shadow: #444;
 @nav_primary: #fff;
 @nav_secondary: #ddd;
 
@@ -19,6 +20,7 @@ nav {
   margin: 0;
   overflow: hidden;
   background: @nav_bg;
+  box-shadow: 6px 3px 2px -1px @nav_shadow;
   font-family: 'Noto Sans', sans-serif;
   font-size: @nav_title_height;
 
