--- a/res/css/mcomella.css
+++ b/res/css/mcomella.css
@@ -11,6 +11,7 @@ nav {
   margin: 0;
   overflow: hidden;
   background: #f24610;
+  box-shadow: 6px 3px 2px -1px #444444;
   font-family: 'Noto Sans', sans-serif;
   font-size: 24px;
 }
