Add text-shadow to <nav>.

--- a/res/css/mcomella.less
+++ b/res/css/mcomella.less
@@ -23,6 +23,7 @@ nav {
   box-shadow: 6px 3px 2px -1px @nav_shadow;
   font-family: 'Noto Sans', sans-serif;
   font-size: @nav_title_height;
+  text-shadow: 1px 1px darken(@nav_bg, 5%);
 
   > * { display: inline-block; }
   #title, #nav-local { float: left; }
