--- a/res/css/mcomella.css
+++ b/res/css/mcomella.css
@@ -14,6 +14,7 @@ nav {
   box-shadow: 6px 3px 2px -1px #444444;
   font-family: 'Noto Sans', sans-serif;
   font-size: 24px;
+  text-shadow: 1px 1px #dd3e0c;
 }
 nav > * {
   display: inline-block;
