--- a/res/css/mcomella.less
+++ b/res/css/mcomella.less
@@ -12,6 +12,10 @@
   src: url('http://fonts.googleapis.com/css?family=Noto+Sans');
 }
 
+body {
+  font-family: 'Noto Sans', sans-serif;
+}
+
 a { text-decoration: none; }
 
 nav {
@@ -21,7 +25,6 @@ nav {
   overflow: hidden;
   background: @nav_bg;
   box-shadow: 6px 3px 2px -1px @nav_shadow;
-  font-family: 'Noto Sans', sans-serif;
   font-size: @nav_title_height;
   text-shadow: 1px 1px darken(@nav_bg, 5%);
 
