--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,10 @@
     </ul>
   </nav>
 
-  <div id="content">
-    {{ content }}
+  <div id="content-padding">
+    <div id="content">
+      {{ content }}
+    </div>
   </div>
 </body>
 </html>
