--- a/res/css/mcomella.css
+++ b/res/css/mcomella.css
@@ -2,7 +2,8 @@
   font-family: 'Noto Sans';
   src: url('http://fonts.googleapis.com/css?family=Noto+Sans');
 }
-body {
+html {
+  background: #ecece7;
   font-family: 'Noto Sans', sans-serif;
 }
 a {
@@ -55,10 +56,21 @@ nav a:visited {
 nav a:hover {
   color: #dddddd;
 }
+#content-padding {
+  padding: 1.5em 18px;
+}
 #content {
-  width: 700px;
-  padding: 0;
+  max-width: 940px;
+  padding: 8px 12px;
   margin: 0 auto;
+  border: none;
+  border-radius: 6px;
   clear: both;
-  background: #f00;
+  color: #ffffff;
+  background: #f24610;
+  box-shadow: 3px 3px 2px -1px #444444;
+}
+#content h1 {
+  padding: 0;
+  margin: 0;
 }
