Refactor DOM ids.

--- a/res/css/mcomella.less
+++ b/res/css/mcomella.less
@@ -62,8 +62,8 @@ nav {
   a:hover { color: @nav_fg_secondary; }
 }
 
-#content-padding { padding: 1.5em 18px 16px 18px; }
-#content {
+#shell-padding { padding: 1.5em 18px 16px 18px; }
+#shell {
   max-width: 940px;
   padding: 8px 12px;
   margin: 0 auto;
@@ -81,7 +81,7 @@ nav {
   }
 }
 
-#info {
+#content {
   padding: 10px 12px;
   margin: 4px 0px;
   border: none;
