--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
     </ul>
   </nav>
 
-  <div id="content-padding">
-    <div id="content">
+  <div id="shell-padding">
+    <div id="shell">
       {{ content }}
     </div>
   </div>
