--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -4,6 +4,6 @@ layout: default
 {% if page.title %}
   <h1>{{ page.title }}</h1>
 {% endif %}
-<div id="info">
+<div id="content">
   {{ content }}
 </div>
