--- a/res/css/mcomella.css
+++ b/res/css/mcomella.css
@@ -64,10 +64,10 @@ nav a:visited {
 nav a:hover {
   color: #dddddd;
 }
-#content-padding {
+#shell-padding {
   padding: 1.5em 18px 16px 18px;
 }
-#content {
+#shell {
   max-width: 940px;
   padding: 8px 12px;
   margin: 0 auto;
@@ -77,14 +77,14 @@ nav a:hover {
   background: #f24610;
   box-shadow: 3px 3px 2px -1px #444444;
 }
-#content h1 {
+#shell h1 {
   padding: 0;
   margin: 0;
   color: #ffffff;
   text-shadow: 1px 1px #dd3e0c;
   font-style: italic;
 }
-#info {
+#content {
   padding: 10px 12px;
   margin: 4px 0px;
   border: none;
@@ -93,9 +93,9 @@ nav a:hover {
   background: #ffffff;
   box-shadow: inset 0px 0px 2px 0px #444444;
 }
-#info p:first-child {
+#content p:first-child {
   margin-top: 0;
 }
-#info p:last-child {
+#content p:last-child {
   margin-bottom: 0;
 }
