--- a/res/css/mcomella.css
+++ b/res/css/mcomella.css
@@ -8,21 +8,18 @@ html {
 }
 a,
 a:visited {
-  color: #f24610;
   text-decoration: none;
 }
-a:hover {
-  color: #ac3009;
-}
-a:active {
-  color: #f24610;
+nav,
+#shell {
+  color: #ffffff;
+  background: #f24610;
 }
 nav {
   height: 1.2em;
   padding: 4px 16px;
   margin: 0;
   overflow: hidden;
-  background: #f24610;
   box-shadow: 6px 3px 2px -1px #444444;
   font-size: 24px;
   text-shadow: 1px 1px #dd3e0c;
@@ -64,6 +61,9 @@ nav a:visited {
 nav a:hover {
   color: #dddddd;
 }
+nav a:active {
+  color: #ffffff;
+}
 #shell-padding {
   padding: 1.5em 18px 16px 18px;
 }
@@ -74,13 +74,11 @@ nav a:hover {
   border: none;
   border-radius: 6px;
   clear: both;
-  background: #f24610;
   box-shadow: 3px 3px 2px -1px #444444;
 }
 #shell h1 {
   padding: 0;
   margin: 0;
-  color: #ffffff;
   text-shadow: 1px 1px #dd3e0c;
   font-style: italic;
 }
@@ -98,4 +96,14 @@ nav a:hover {
 }
 #content p:last-child {
   margin-bottom: 0;
+}
+#content a,
+#content a:visited {
+  color: #f24610;
+}
+#content a:hover {
+  color: #ac3009;
+}
+#content a:active {
+  color: #f24610;
 }
