Change color scheme; reduce shadows.

--- a/res/css/mcomella.less
+++ b/res/css/mcomella.less
@@ -1,9 +1,10 @@
 @body_bg: #ecece7;
-@shadow: #444;
+@shadow: #ccc;
 
 @nav_fg: #fff;
 @nav_fg_secondary: #ddd;
-@nav_bg: #f24610;
+@nav_fg_secondary: darken(@nav_fg, 10%);
+@nav_bg: rgba(64, 138, 41, 0.75);
 
 @content_fg: #222;
 @content_bg: #fff;
