--- a/res/css/mcomella.css
+++ b/res/css/mcomella.css
@@ -13,16 +13,16 @@ a:visited {
 nav,
 #shell {
   color: #ffffff;
-  background: #f24610;
+  background: rgba(64, 138, 41, 0.75);
 }
 nav {
   height: 1.2em;
   padding: 4px 16px;
   margin: 0;
   overflow: hidden;
-  box-shadow: 6px 3px 2px -1px #444444;
+  box-shadow: 6px 3px 2px -1px #cccccc;
   font-size: 24px;
-  text-shadow: 1px 1px #dd3e0c;
+  text-shadow: 1px 1px rgba(55, 118, 35, 0.75);
 }
 nav > * {
   display: inline-block;
@@ -59,7 +59,7 @@ nav a:visited {
   color: #ffffff;
 }
 nav a:hover {
-  color: #dddddd;
+  color: #e6e6e6;
 }
 nav a:active {
   color: #ffffff;
@@ -74,12 +74,12 @@ nav a:active {
   border: none;
   border-radius: 6px;
   clear: both;
-  box-shadow: 3px 3px 2px -1px #444444;
+  box-shadow: 3px 3px 2px -1px #cccccc;
 }
 #shell h1 {
   padding: 0;
   margin: 0;
-  text-shadow: 1px 1px #dd3e0c;
+  text-shadow: 1px 1px rgba(55, 118, 35, 0.75);
   font-style: italic;
 }
 #content {
@@ -89,7 +89,7 @@ nav a:active {
   border-radius: 4px;
   color: #222222;
   background: #ffffff;
-  box-shadow: inset 0px 0px 2px 0px #444444;
+  box-shadow: inset 0px 0px 2px 0px #cccccc;
 }
 #content p:first-child {
   margin-top: 0;
@@ -99,11 +99,11 @@ nav a:active {
 }
 #content a,
 #content a:visited {
-  color: #f24610;
+  color: rgba(64, 138, 41, 0.75);
 }
 #content a:hover {
-  color: #ac3009;
+  color: rgba(37, 79, 23, 0.75);
 }
 #content a:active {
-  color: #f24610;
+  color: rgba(64, 138, 41, 0.75);
 }
