--- a/res/css/mcomella.css
+++ b/res/css/mcomella.css
@@ -1,22 +1,34 @@
-@font-face {
-  font-family: 'Noto Sans';
-  src: url('http://fonts.googleapis.com/css?family=Noto+Sans');
-}
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic);
 html {
   background: #ecece7;
-  font-family: 'Noto Sans', sans-serif;
+}
+h1,
+h2 {
+  padding: 0;
+  margin: 0;
+  font-style: italic;
+}
+p {
+  margin: 0;
+}
+p + p {
+  text-indent: 2em;
 }
 a,
 a:visited {
   text-decoration: none;
 }
+ul {
+  margin: 0;
+}
 nav,
 #shell {
+  font-family: "Source Sans Pro", sans-serif;
   color: #ffffff;
   background: rgba(64, 138, 41, 0.75);
 }
 nav {
-  height: 1.2em;
+  height: 1.3em;
   padding: 4px 16px;
   margin: 0;
   overflow: hidden;
@@ -41,7 +53,7 @@ nav ul {
   padding: 0;
   margin: 0;
   font-size: 16px;
-  line-height: 32px;
+  line-height: 35px;
   list-style: none;
 }
 nav ul li {
@@ -68,7 +80,7 @@ nav a:active {
   padding: 1.5em 18px 16px 18px;
 }
 #shell {
-  max-width: 940px;
+  max-width: 750px;
   padding: 8px 12px;
   margin: 0 auto;
   border: none;
@@ -77,25 +89,22 @@ nav a:active {
   box-shadow: 3px 3px 2px -1px #cccccc;
 }
 #shell h1 {
-  padding: 0;
-  margin: 0;
   text-shadow: 1px 1px rgba(55, 118, 35, 0.75);
-  font-style: italic;
 }
 #content {
   padding: 10px 12px;
   margin: 4px 0px;
   border: none;
   border-radius: 4px;
-  color: #222222;
+  color: #444444;
   background: #ffffff;
   box-shadow: inset 0px 0px 2px 0px #cccccc;
+  font-size: 110%;
+  line-height: 1.55;
 }
-#content p:first-child {
-  margin-top: 0;
-}
-#content p:last-child {
-  margin-bottom: 0;
+#content h2 {
+  margin-top: 1em;
+  color: rgba(64, 138, 41, 0.75);
 }
 #content a,
 #content a:visited {
