--- a/res/css/mcomella.css
+++ b/res/css/mcomella.css
@@ -1,6 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic);
 html {
   background: #ecece7;
+  min-width: 400px;
 }
 h1,
 h2 {
@@ -31,7 +32,7 @@ nav {
   height: 1.3em;
   padding: 4px 16px;
   margin: 0;
-  overflow: hidden;
+  overflow: show;
   box-shadow: 6px 3px 2px -1px #cccccc;
   font-size: 24px;
   text-shadow: 1px 1px rgba(55, 118, 35, 0.75);
@@ -47,7 +48,7 @@ nav #nav-external {
   float: right;
 }
 nav #title {
-  margin-right: 20px;
+  margin-right: 0.75em;
 }
 nav ul {
   padding: 0;
@@ -58,12 +59,12 @@ nav ul {
 }
 nav ul li {
   display: inline;
-  margin: 0 8px;
+  margin: 0 0.6em;
 }
-nav ul li:first-child {
+nav ul #nav-local:first-child {
   margin-left: 0;
 }
-nav ul li:last-child {
+nav ul #nav-external:last-child {
   margin-right: 0;
 }
 nav a,
