--- a/res/css/mcomella.less
+++ b/res/css/mcomella.less
@@ -104,6 +104,7 @@ nav {
     margin-top: 1em;
     color: @nav_bg;
   }
+  ul { padding: 0; }
 
   // Bullet color hack via:
   // http://css-tricks.com/forums/discussion/comment/81122/#Comment_81122
