--- a/res/css/mcomella.less
+++ b/res/css/mcomella.less
@@ -104,7 +104,6 @@ nav {
     margin-top: 1em;
     color: @nav_bg;
   }
-  ul { padding: 0; }
   hr {
     width: 10%;
     padding: 0;
@@ -123,6 +122,8 @@ nav {
   a, a:visited { color: @nav_bg; }
   a:hover { color: darken(@nav_bg, 15%); }
 }
+
+#post-list { padding: 0; }
 
 #post-changer {
   height: 1.5em;
