--- a/res/css/mcomella.less
+++ b/res/css/mcomella.less
@@ -125,10 +125,13 @@ nav {
 
 #post-list { padding: 0; }
 
-#post-changer {
-  height: 1.5em;
-  padding: 0 16px;
-  #next-post { float: right; }
+#post-metadata {
+  #cc-license, #post-list-link { text-align: center; }
+  #post-nav {
+    height: 1.5em;
+    padding: 0 16px;
+    #next-post { float: right; }
+  }
 }
 #prev-post:before { content: "\21A9\00A0"; } // Left arrow.
 #next-post:after { content: "\00A0\21AA"; } // Right arrow.
