Add syntax highlighting to posts.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,9 @@
 
   <link rel="stylesheet" href="/res/css/normalize.css" />
   <link rel="stylesheet" href="/res/css/mcomella.css" />
+  {% if page.code %}
+    <link rel="stylesheet" href="/res/css/syntax.css" />
+  {% endif %}
 </head>
 <body>
   <nav>
