--- a/res/css/mcomella.less
+++ b/res/css/mcomella.less
@@ -80,7 +80,7 @@ nav {
 
 #shell-padding { padding: 1.5em 18px 16px 18px; }
 #shell {
-  max-width: 750px;
+  max-width: 850px;
   padding: 8px 12px;
   margin: 0 auto;
   border: none;
@@ -139,4 +139,17 @@ nav {
 #post-date {
   font-style: italic;
   color: lighten(@content_fg, 30%);
+}
+
+.highlight {
+  margin: 0.5em 0;
+  padding: 0;
+  font-size: 110%;
+  line-height: 1.2em;
+  overflow-x: auto;
+  border-radius: 4px;
+  pre {
+    padding: 4px 8px;
+    margin: 0;
+  }
 }
