--- a/res/css/mcomella.css
+++ b/res/css/mcomella.css
@@ -84,7 +84,7 @@ nav a:hover {
   padding: 1.5em 18px 16px 18px;
 }
 #shell {
-  max-width: 750px;
+  max-width: 850px;
   padding: 8px 12px;
   margin: 0 auto;
   border: none;
@@ -153,4 +153,16 @@ nav a:hover {
 #post-date {
   font-style: italic;
   color: #919191;
+}
+.highlight {
+  margin: 0.5em 0;
+  padding: 0;
+  font-size: 110%;
+  line-height: 1.2em;
+  overflow-x: auto;
+  border-radius: 4px;
+}
+.highlight pre {
+  padding: 4px 8px;
+  margin: 0;
 }
