Add code block box-shadow.

--- a/res/css/mcomella.css
+++ b/res/css/mcomella.css
@@ -161,6 +161,7 @@ nav a:hover {
   line-height: 1.2em;
   overflow-x: auto;
   border-radius: 4px;
+  box-shadow: 3px 3px 2px -1px #cccccc;
 }
 .highlight pre {
   padding: 4px 8px;
