--- a/res/css/mcomella.less
+++ b/res/css/mcomella.less
@@ -148,6 +148,7 @@ nav {
   line-height: 1.2em;
   overflow-x: auto;
   border-radius: 4px;
+  box-shadow: 3px 3px 2px -1px @shadow;
   pre {
     padding: 4px 8px;
     margin: 0;
