Add indent after code block.

--- a/res/css/mcomella.less
+++ b/res/css/mcomella.less
@@ -28,7 +28,7 @@ h1, h2 {
 }
 
 p { margin: 0; }
-p + p { text-indent: 2em; }
+p + p, .highlight + p { text-indent: 2em; }
 
 a, a:visited, a:hover {
   text-decoration: none;
