Move title to full name; Add nickname title to id.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 						{% if page.title == "About" %}
 							About
 						{% else %}
-							{{ site.title }} 
+							{{ site.nickname_title }}
 						{% endif %}
 						</h1>
 					</a>
