--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -15,7 +15,11 @@
 		     */
 		    var disqus_config = function () {
 			    this.page.url = "{{ site.url }}{{ page.url }}";  // Replace PAGE_URL with your page's canonical URL variable
-			    this.page.identifier = "{{ page.url }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+			    {% if page.disqus-id-override %}
+			        this.page.identifier = "{{ page.disqus-id-override }}"; // The threads are associated with the wrong page.
+			    {% else %}
+			        this.page.identifier = "{{ page.url }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+			    {% endif %}
 		    };
 		    (function() {  // DON'T EDIT BELOW THIS LINE
 			var d = document, s = d.createElement('script');
