--- a/_sass/_vars.scss
+++ b/_sass/_vars.scss
@@ -22,7 +22,7 @@ $base-font-color: rgba($dark-gray-color, .8);
 $small-spacing: $base-spacing / 2;
 $base-border-color: $light-gray-color;
 $base-border: 1px solid $base-border-color;
-$base-highlight-color: #4a96ad;
+$base-highlight-color: #60c2e0;
 
 $code-font: 'Roboto Mono', sans-serif;
 $medium-gray-color: #999;
