--- a/css/redesign.css
+++ b/css/redesign.css
@@ -1,7 +1,20 @@
+body {
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+}
+
+#banner, a, a:visited {
+    color: #D44646;
+    /* #D61E1E */
+}
+
 header {
     display: flex;
     height: 90px;
-    margin: 20px auto;
+    margin: 20px 0;
 
     background: #960909;
 
@@ -10,6 +23,7 @@ header {
 
 #banner {
     display: flex;
+    box-sizing: border-box;
     height: 72px;
     width: 67%;
     margin: 0 auto;
@@ -25,7 +39,6 @@ header {
     align-items: flex-end;
     justify-content: space-between;
 
-    color: #D44646;
     font-family: Helvetica, sans-serif;
     font-weight: lighter;
     font-size: 28px;
@@ -38,6 +51,9 @@ header {
     - Perfect padding.
     - Rest of document.
     - Licenses (should I copyright my design?)
+    - github, twitter, rss.
+    - loading image, or missing.
+    - fix border box thing.
     */
     transform: skew(45deg); /* Undo container skew. */
 }
@@ -56,4 +72,25 @@ nav > span {
     border: solid 2px black;
 
     align-self: center;
+}
+
+.post-list {
+    max-width: 1000px;
+    margin: 0 auto;
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+}
+
+.post-heading {
+    font-size: 36px;
+}
+
+.post-name {
+
+}
+
+.post-time {
+    color: #999999;
+    font-style: italic;
 }
