Add links to banner.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,10 +15,10 @@
         <!-- *-left and *-right used to create parallelogram. -->
         <div id="banner-left" class="banner"></div>
         <div id="banner-center" class="banner">
-            <div>mcomella.xyz</div>
+            <div><a href="/">mcomella.xyz</a></div>
             <nav>
-                <span>About</span>
-                <span>Posts</span>
+                <span><a href="/about">About</a></span>
+                <span><a href="/">Posts</a></span>
                 <img class="headshot" src="https://www.gravatar.com/avatar/36d05d5b8389b342fc0629461fb39377?s=150">
             </nav>
         </div>
