--- a/css/redesign.css
+++ b/css/redesign.css
@@ -23,6 +23,7 @@ a {
     font-weight: lighter;
 }
 
+/* --- SITE HEADER START --- */
 header {
     display: flex;
     height: 122px;
@@ -107,7 +108,6 @@ header .headshot {
     max-width: 1000px;
     margin: 0 auto;
 
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 24px;
 }
 
@@ -121,19 +121,52 @@ header .headshot {
 
 .content {
     margin: 0 auto;
-    font-family: sans-serif;
+    color: #444444;
+    font-family: Helvetica, sans-serif;
+    font-weight: lighter;
+    line-height: 1.4;
+    letter-spacing: 0.3px;
 }
 
+/* --- POST START --- */
 .post {
-    max-width: 1050px;
+    width: 55%;
     font-size: 21px;
 }
 
 .post-title, .post-date {
-    margin-bottom: 8px;
     text-align: center;
+    line-height: 1;
+    margin-bottom: 6px;
 }
 
 .post-title {
     font-size: 38px;
+}
+
+.post h2 {
+    margin-top: 52.5px; /* p margin 2.5x */
+    color: #111111;
+}
+
+.post h3, .post h4, .post h5, .post h6 {
+    margin-top: 31.5px; /* p margin 1.5x */
+    color: #555555;
+}
+
+.post h2 + *, .post h3 + *, .post h4 + *, .post h5 + *, .post h6 + * {
+    margin-top: 0;
+}
+
+p {
+    margin: 21px 0;
+}
+
+.post ul, .post ol {
+    padding-left: 80px;
+}
+
+.highlighter-rouge {
+    padding: 2px 6px;
+    background: #E5E5E5;
 }
