Style post images.

--- a/css/redesign.css
+++ b/css/redesign.css
@@ -166,6 +166,13 @@ p {
     padding-left: 80px;
 }
 
+.post img {
+    display: block;
+    max-width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .highlighter-rouge {
     padding: 2px 6px;
     background: #E5E5E5;
